# optimize_methods

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: ceres_curve_fitting.cpp  g2o_curve_fitting.cpp  gtsam_curve_fitting.cpp
